--- a/about.html
+++ b/about.html
@@ -54,16 +54,33 @@
         → Read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work and my process</a>.<br>
         → See what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.<br>
         → Check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.<br>
-        → Read other people's experience of <a href="https://portfolio.ciaran.design/working-with-me" target="_blank">working with me</a>.<br>
+        <!-- → Read other people's experience of <a href="https://portfolio.ciaran.design/working-with-me" target="_blank">working with me</a>.<br> -->
         → View
 
                 <a class="" href="https://portfolio.ciaran.design/cv" target="_blank">
                    my CV
                 </a>.
       </p>
-      <hr><hr>
     </div>
 
+  <div class="bg-grey-testimonial">
+    <div class="container">
+      <div class="testimonial">
+        <p>
+          "Ciaran's product design and work are at the intersection of highly beautiful and functional. He always put's the users needs first and then crafts a great user experience paired with a great UI. Working with Ciaran is a treat and he comes strongly recommended across my network."
+        </p>
+
+
+          <p>
+            <b><a target="_blank" href="https://twitter.com/mikepreuss">Mike Preuss</a><b><br>
+            <span class="text-gray">
+              CEO & Founder at <a target="_blank" href="https://visible.vc">Visible.vc</a>
+            </span>
+          </p>
+      </div>
+      </div>
+
+    </div>
     <div class="footer">
       <div class="container">
         <p>
