--- a/index.html
+++ b/index.html
@@ -50,18 +50,20 @@
         <div class="featured-works">
 
           <a class="featured-work bg-yellow" href="https://portfolio.ciaran.design/visible" target="_blank">
-            <h2 class="featured-work-title">
-              Visible.vc
-            </h2>
-            <p class="featured-work-desc">
-              Helping 3000 companies engage their investors through professional updates.
-            </p>
+            <div>
+              <h2 class="featured-work-title">
+                Visible.vc
+              </h2>
+              <p class="featured-work-desc">
+                Helping 3000 companies engage their investors through professional updates.
+              </p>
 
             <div class="featured-work-footer">
               <span class="featured-work-link">
                 View Case Study →
               </span>
             </div>
+          </div>
 
             <div class="featured-work-img">
               <img src="img/Visible.png"/>
@@ -69,11 +71,12 @@
           </a>
 
           <a class="featured-work bg-yellow" href="https://portfolio.ciaran.design/editmode" target="_blank">
+            <div>
             <h2 class="featured-work-title">
               EditMode
             </h2>
             <p class="featured-work-desc">
-              Taking the pain out of content editing on websites and web apps.
+Taking the pain out of content editing on websites and web apps.
             </p>
 
             <div class="featured-work-footer">
@@ -81,7 +84,7 @@
                 View Case Study →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/EditMode.png"/>
             </div>
@@ -96,23 +99,25 @@
         <div class="featured-works">
 
           <a href="https://portfolio.ciaran.design/clubzap" target="_blank" class="featured-work bg-yellow">
-            <h2 class="featured-work-title">ClubZap</h2>
-            <p class="featured-work-desc">
-              Helping sports clubs manage events, payments and administration.
-            </p>
+            <div>
+              <h2 class="featured-work-title">ClubZap</h2>
+              <p class="featured-work-desc">
+                Helping sports clubs manage events, payments and administration.
+              </p>
 
-            <div class="featured-work-footer">
-              <span class="featured-work-link">
-                View Project →
-              </span>
+              <div class="featured-work-footer">
+                <span class="featured-work-link">
+                  View Project →
+                </span>
+              </div>
             </div>
-
             <div class="featured-work-img">
               <img src="img/clubzap.png"/>
             </div>
           </a>
 
           <a href="https://portfolio.ciaran.design/tokyomate" target="_blank" class="featured-work bg-pink">
+            <div>
             <h2 class="featured-work-title">
               TokyoMate Assistant
             </h2>
@@ -125,7 +130,7 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/tokyomate.png"/>
             </div>
@@ -133,6 +138,7 @@
 
 
           <a href="https://portfolio.ciaran.design/booksync" target="_blank" class="featured-work bg-pink">
+            <div>
             <h2 class="featured-work-title">
               BookSync
             </h2>
@@ -145,13 +151,14 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/booksync.png"/>
             </div>
           </a>
 
           <a href="https://portfolio.ciaran.design/orcadia" target="_blank" class="featured-work bg-yellow">
+            <div>
             <h2 class="featured-work-title">Orcadia</h2>
             <p class="featured-work-desc">
               A SaaS app to gather your employees, spark new connections, and have fun together — no matter where you are.
@@ -162,13 +169,14 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/orcadia.png"/>
             </div>
           </a>
 
           <a href="https://portfolio.ciaran.design/housebuild" target="_blank" class="featured-work bg-blue">
+            <div>
             <h2 class="featured-work-title">
               HouseBuild
             </h2>
@@ -181,15 +189,15 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/HouseBuild.png"/>
             </div>
           </a>
 
 
-          <a href="https://portfolio.ciaran.design/skurt" target="_blank" class="featured-work bg-green">
-            <div class="featured-work-content">
+          <a href="https://portfolio.ciaran.design/skurt" target="_blank" class="featured-work">
+            <div>
               <h2 class="featured-work-title">
                 Fair
               </h2>
@@ -203,13 +211,13 @@
                 </span>
               </div>
             </div>
-
             <div class="featured-work-img">
               <img src="img/Skurt.png"/>
             </div>
           </a>
 
           <div class="featured-work bg-yellow">
+            <div>
             <h2 class="featured-work-title">The Currency</h2>
             <p class="featured-work-desc">
               A brand new news site offering insightful, dynamic commentary and investigations.
@@ -220,13 +228,14 @@
                 Work in progress
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/TheCurrency.png"/>
             </div>
           </div>
 
           <a href="https://portfolio.ciaran.design/irevise" target="_blank" class="featured-work bg-pink">
+            <div>
             <h2 class="featured-work-title">
               iRevise
             </h2>
@@ -239,13 +248,14 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/iRevise.png"/>
             </div>
           </a>
 
           <a href="https://talentacquisition.ie" target="_blank" class="featured-work bg-pink">
+            <div>
             <h2 class="featured-work-title">
               TalentAqcuisition.ie
             </h2>
@@ -258,13 +268,14 @@
                 View Site →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/talentacquisition.png"/>
             </div>
           </a>
 
           <a href="https://portfolio.ciaran.design/marketing-design" target="_blank" class="featured-work bg-pink">
+            <div>
             <h2 class="featured-work-title">
               Visible Marketing Design
             </h2>
@@ -277,38 +288,41 @@
                 View Project →
               </span>
             </div>
-
+            </div>
             <div class="featured-work-img">
               <img src="img/visible-marketing.png"/>
             </div>
           </a>
         </div>
 
-        <hr><br><br>
 
-          <div class="testimonial">
-
-            <p>
-              "I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
-                What sets him apart is his ability to:
-            </p>
-              <ol>
-                <li>Understand what he’s designing or selling almost better than the client understands it (I believe this is called cognitive empathy). </li>
-                <li>Work at pace while maintaining design integrity. I’ve genuinely never worked with someone who has managed to get the really important things right, and nail the finish, without spending a disproportionate amount of time on the minutiae. This style works incredibly well if you’re working on SAAS and/or landing pages, both of which were the case for our projects.</li>
-              </ol>
-              <p>
-                I’ve worked with Ciaran on 3 projects this year - two where we were working for the same client, and one where he was working for me. I have since recommended him to over 10 people in my personal network - this is not an exaggeration."
-              </p>
-
-              <p>
-                <b>Tony Ennis<b><br>
-                <span class="text-gray">Prev: Co-founder @ First Circle | CTO Web Summit</span>
-              </p>
-          </div>
 
 </div>
 
-        <hr><hr>
+<div class="bg-grey-testimonial">
+  <div class="container">
+    <div class="testimonial align-center">
+      <p>
+        "I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
+          What sets him apart is his ability to:
+      </p>
+        <ol>
+          <li>Understand what he’s designing or selling almost better than the client understands it (I believe this is called cognitive empathy). </li>
+          <li>Work at pace while maintaining design integrity. I’ve genuinely never worked with someone who has managed to get the really important things right, and nail the finish, without spending a disproportionate amount of time on the minutiae. This style works incredibly well if you’re working on SAAS and/or landing pages, both of which were the case for our projects.</li>
+        </ol>
+        <p>
+          I’ve worked with Ciaran on 3 projects this year - two where we were working for the same client, and one where he was working for me. I have since recommended him to over 10 people in my personal network - this is not an exaggeration."
+        </p>
+
+        <p>
+          <b><a target="_blank" href="https://twitter.com/tonyennis">Tony Ennis</a><b><br>
+          <span class="text-gray">Prev Co-founder at <a target="_blank" href="https://www.firstcircle.ph">First Circle</a>, CTO at <a target="_blank" href="https://websummit.com/">Web Summit</a>
+          </span>
+        </p>
+    </div>
+</div>
+  </div>
+
     <div class="footer">
       <div class="container">
         <p>
