--- a/landing.html
+++ b/landing.html
@@ -24,9 +24,14 @@
     <div class="container">
       <div class="flexbox">
         <div class="profile">
-          <h1>Ciarán Hanrahan</h1>
-          <h2>Product Designer</h2>
+          <a href="/">
+            <h1>Ciarán Hanrahan</h1>
+            <h2>Product Designer</h2>
+          </a>
         </div>
+        <a class="nav-item mobile-hide" href="/">
+          Home
+        </a>
         <a class="nav-item mobile-hide" href="/about">
           About
         </a>
