--- a/success.html
+++ b/success.html
@@ -24,9 +24,14 @@
     <div class="container">
       <div class="flexbox">
         <div class="profile">
-          <h1>Ciarán Hanrahan</h1>
-          <h2>Product Designer</h2>
+          <a href="/">
+            <h1>Ciarán Hanrahan</h1>
+            <h2>Product Designer</h2>
+          </a>
         </div>
+        <a class="nav-item mobile-hide" href="/">
+          Home
+        </a>
         <a class="nav-item mobile-hide" href="/about">
           About
         </a>
@@ -38,9 +43,10 @@
       <hr>
         <h1>Thank you!</h1>
         <p class="about-me">
-          I'll be in touch shortly with details.
-
-        <br><hr>
+          I'll be in touch very shortly with next steps.
+        <br>
+        <a href="/">Check out some projects →</a>
+        <hr>
 
 <div id="error-message"></div>
 
