--- a/references.html
+++ b/references.html
@@ -41,9 +41,11 @@
 
   <div class="container">
       <hr>
-        <h1>Ciaran References</h1>
+        <h1>Ciaran & Emma References</h1>
         <p class="about-me">
-          <a href="https://drive.google.com/drive/folders/1m1Y_4i_Ft4OB5noAxMwKlHi1HOHd7Eke">View references</a>
+          <br><br>Hi Dolores,<br><br>
+          I couldn't attach references in that Daft message box but hopefully you've found your way here. This link will have my references in a folder. It also has proof of my income. I can get Emma's also should you require it.<br><br>
+          <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1m1Y_4i_Ft4OB5noAxMwKlHi1HOHd7Eke">View references</a>
 
         <br><hr>
 
