--- a/references.html
+++ b/references.html
@@ -25,8 +25,8 @@
       <div class="flexbox">
         <div class="profile">
           <a href="/">
-            <h1>Ciarán Hanrahan</h1>
-            <h2>Product Designer</h2>
+            <h1>Ciarán & Emma</h1>
+            <h2>References</h2>
           </a>
         </div>
         <a class="nav-item mobile-hide" href="/">
@@ -41,11 +41,13 @@
 
   <div class="container">
       <hr>
-        <h1>Ciaran & Emma References</h1>
+        <h1>Hi Dolores 👋</h1>
         <p class="about-me">
-          <br><br>Hi Dolores,<br><br>
-          I couldn't attach references in that Daft message box but hopefully you've found your way here. This link will have my references in a folder. It also has proof of my income. I can get Emma's also should you require it.<br><br>
-          <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1m1Y_4i_Ft4OB5noAxMwKlHi1HOHd7Eke">View references</a>
+          <br>
+          I couldn't attach references or a link in that Daft message box, but hopefully you've found your way here.
+
+          <br><br>This link has our references in a folder. It also has proof of my income. I can get Emma's should you require it.<br><br>
+          <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1m1Y_4i_Ft4OB5noAxMwKlHi1HOHd7Eke">View references →</a>
 
         <br><hr>
 
