add contact link

--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
         <a class="nav-item mobile-hide" href="/">
           Home
         </a>
+        <a class="nav-item mobile-hide nav-item-active" href="/">
+          About
+        </a>
 
       </div>
     </div>
