--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <h1>Ciarán Hanrahan</h1>
           <h2>Product Designer</h2>
         </div>
+        <a class="nav-item nav-item-active mobile-hide" href="/">
+          Home
+        </a>
         <a class="nav-item mobile-hide" href="/about">
           About
         </a>
@@ -294,9 +297,12 @@ Taking the pain out of content editing on websites and web apps.
             </div>
           </a>
         </div>
+</div>
 
-
-
+<div class="cta">
+  <a class="btn btn-primary" target="_blank" href="mailto:justciaranhanrahan@gmail.com">
+    Send me an email →
+  </a>
 </div>
 
 <div class="bg-grey-testimonial">
