--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ciaran Hanrahan, Product Designer, UX & UI</title>
+  <title>Ciaran Hanrahan, Product Designer</title>
   <meta name="keywords" content="ux, ui, web, design, mobile, experience, interface, interaction, visual, developer, ciaran hanrahan,">
   <meta name="description" content="Ciaran Hanrahan - Product designer creating beautiful digital products with a focus on simplicity &amp; thoughtful product experiences.">
   <meta name="author" content="Ciaran Hanrahan">
