--- a/index.html
+++ b/index.html
@@ -101,6 +101,42 @@ Taking the pain out of content editing on websites and web apps.
 
         <div class="featured-works">
 
+          <a href="https://conjure.so" target="_blank" class="featured-work bg-yellow">
+            <div>
+              <h2 class="featured-work-title">Conjure</h2>
+              <p class="featured-work-desc">
+                A platform to measure and understand your behaviour, to manage, plan and modify it.
+              </p>
+
+              <div class="featured-work-footer">
+                <span class="featured-work-link">
+                  View Site →
+                </span>
+              </div>
+            </div>
+            <div class="featured-work-img">
+              <img src="img/conjure.png"/>
+            </div>
+          </a>
+
+          <a href="https://convolute.jp" target="_blank" class="featured-work bg-yellow">
+            <div>
+              <h2 class="featured-work-title">Convolute</h2>
+              <p class="featured-work-desc">
+                A platform enabling every organization to do more with the power of AI.
+              </p>
+
+              <div class="featured-work-footer">
+                <span class="featured-work-link">
+                  View Site →
+                </span>
+              </div>
+            </div>
+            <div class="featured-work-img">
+              <img src="img/convolute.png"/>
+            </div>
+          </a>
+
           <a href="https://portfolio.ciaran.design/clubzap" target="_blank" class="featured-work bg-yellow">
             <div>
               <h2 class="featured-work-title">ClubZap</h2>
@@ -227,9 +263,7 @@ Taking the pain out of content editing on websites and web apps.
             </p>
 
             <div class="featured-work-footer">
-              <span class="featured-work-link text-gray">
-                Work in progress
-              </span>
+              
             </div>
             </div>
             <div class="featured-work-img">
