--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="featured-work-img">
-        <img src="img/OneFootball.png"/>
+        <img src="img/onefootball.png"/>
       </div>
     </a>
 
