--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           </a>
         </div>
         <a class="nav-item mobile-hide" href="/">
-          Home
+          Work
         </a>
         <a class="nav-item mobile-hide nav-item-active" href="/">
           About
@@ -43,11 +43,17 @@
   <section>
     <div class="container">
       <hr>
-      <h3>Overview</h3>
+      <h3>About me</h3>
       <p class="about-me">
-        Full-stack product designer with 8 years experience designing large-scale products for clients across Europe, the US and South-East Asia. I've helped to launch and grow successful startups, and worked with well known companies to deliver end to end solutions to complex scenarios, always with a focus on putting the customer first.
+        I’m an experienced product designer, responsible for leading the design process on product teams, defining product direction, prioritising cross-company efforts, and shaping new practices within organisations.
+
         <br><br>
-        With a background in design, development, and business I've a rare ability to ideate, design and launch elegant customer focussed solutions that deliver measured results, ensuring the needs of the business are met.
+        As a design generalist, I use a breadth of skills to contribute to the entire product lifecycle — research, ideation, journey mapping, visual & interaction design, prototyping, measuring success, brand design, and product marketing.
+      </p>
+      <hr>
+      <h3>New opportunities</h3>
+      <p class="about-me">
+        I live in Dublin, Ireland and have been working as a freelance designer for 2 years after several years on the leadership team in house on a SaaS app. I'm always open to having a discussion about new projects and opportunities so if you're looking to start something, or have a project coming up, don't hesitate to <a href="mailto:justciaranhanrahan@gmail.com">email me</a> at justciaranhanrahan@gmail.com!
       </p>
 
       <hr>
@@ -58,11 +64,10 @@
         → See what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.<br>
         → Check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.<br>
         <!-- → Read other people's experience of <a href="https://portfolio.ciaran.design/working-with-me" target="_blank">working with me</a>.<br> -->
-        → View
-
+        <!-- → View
                 <a class="" href="https://portfolio.ciaran.design/cv" target="_blank">
                    my CV
-                </a>.
+                </a>. -->
       </p>
     </div>
 
@@ -86,21 +91,22 @@
     </div>
     <div class="footer">
       <div class="container">
-        <p>
-          <small class="flex">
-            <a href="/">Home</a><br>
-            <a href="https://portfolio.ciaran.design/consultations" class="mobile-hide" target="_blank">Book a Consultation</a>
+        <div class="flex justify-between mb-4">
+          <small>
+            <!-- <a href="https://portfolio.ciaran.design/consultations" class="mobile-hide" target="_blank">Book a Consultation</a> -->
             <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>
-            <a href="https://github.com/Jaibles" target="_blank">Github</a>
             <a href="https://twitter.com/CiaranHan" target="_blank">Twitter</a>
+            <a href="https://github.com/Jaibles" target="_blank">Github</a>
 
-            <a class="mobile-show" href="https://portfolio.ciaran.design/cv" target="_blank">
+            <!-- <a class="mobile-show" href="https://portfolio.ciaran.design/cv" target="_blank">
               View CV →
-            </a>
-
+            </a> -->
             <a class="mobile-hide" href="mailto:justciaranhanrahan@gmail.com">justciaranhanrahan@gmail.com</a>
           </small>
-        </p>
+          <small>
+            © ciaran.design 2021
+          </small>
+        </div>
       </div>
     </div>
 </body>
