--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h2>Product Designer</h2>
         </div>
         <a class="nav-item nav-item-active mobile-hide" href="/">
-          Home
+          Work
         </a>
         <a class="nav-item mobile-hide" href="/about">
           About
@@ -31,12 +31,7 @@
   <div class="container">
 <hr>
   <p class="about-me">
-    Full-stack product designer with 8 years experience designing best-in-class digital products.
-    <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
-    <script src="//static.cushionapp.com/availability.js"
-    data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
-  Currently <span data-availability-badge></span> for new opportunities.</p>
-
+    Full-stack product designer with 8 years experience designing best-in-class digital products for clients across Europe, the US and Asia. I've helped to launch and grow successful startups, and worked with well known companies to deliver end to end solutions to complex scenarios, always with a focus on putting the customer first.
   <hr><br>
 
   <h1>Case Studies</h1>
@@ -374,21 +369,22 @@
 
     <div class="footer">
       <div class="container">
-        <p>
-          <small class="flex">
-            <a href="/about">About</a><br>
-            <a href="https://portfolio.ciaran.design/cv" target="_blank">
-              CV
-            </a>
-            <a href="https://portfolio.ciaran.design/consultations" class="mobile-hide" target="_blank">Book a Consultation</a>
+        <div class="flex justify-between mb-4">
+          <small>
+            <!-- <a href="https://portfolio.ciaran.design/consultations" class="mobile-hide" target="_blank">Book a Consultation</a> -->
             <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>
-            <a href="https://github.com/Jaibles" target="_blank">Github</a>
             <a href="https://twitter.com/CiaranHan" target="_blank">Twitter</a>
+            <a href="https://github.com/Jaibles" target="_blank">Github</a>
 
-
+            <!-- <a class="mobile-show" href="https://portfolio.ciaran.design/cv" target="_blank">
+              View CV →
+            </a> -->
             <a class="mobile-hide" href="mailto:justciaranhanrahan@gmail.com">justciaranhanrahan@gmail.com</a>
           </small>
-        </p>
+          <small>
+            © ciaran.design 2021
+          </small>
+        </div>
       </div>
     </div>
 </body>
