--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a class="nav-item mobile-hide" href="/about">
           About
         </a>
+        <a class="nav-item mobile-hide" href="/testimonials">
+          Testimonials
+        </a>
       </div>
     </div>
   </div>
@@ -32,6 +35,7 @@
 <hr>
   <p class="about-me">
     Full-stack product designer with 8 years experience designing best-in-class digital products for clients across Europe, the US and Asia. I've helped to launch and grow successful startups, and worked with well known companies to deliver end to end solutions to complex scenarios, always with a focus on putting the customer first.
+  </p>
   <hr><br>
 
   <h1>Case Studies</h1>
