--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
         <a class="nav-item mobile-hide nav-item-active" href="/">
           About
         </a>
-
+        <a class="nav-item mobile-hide" href="/testimonials">
+          Testimonials
+        </a>
       </div>
     </div>
   </div>
@@ -43,7 +45,7 @@
   <section>
     <div class="container">
       <hr>
-      <h3>About me</h3>
+      <h3 class="text-gray">About me</h3>
       <p class="about-me">
         I’m an experienced product designer, responsible for leading the design process on product teams, defining product direction, prioritising cross-company efforts, and shaping new practices within organisations.
 
@@ -51,13 +53,13 @@
         As a design generalist, I use a breadth of skills to contribute to the entire product lifecycle — research, ideation, journey mapping, visual & interaction design, prototyping, measuring success, brand design, and product marketing.
       </p>
       <hr>
-      <h3>New opportunities</h3>
+      <h3 class="text-gray">New opportunities</h3>
       <p class="about-me">
         I live in Dublin, Ireland and have been working as a freelance designer for 2 years after several years on the leadership team in house on a SaaS app. I'm always open to having a discussion about new projects and opportunities so if you're looking to start something, or have a project coming up, don't hesitate to <a href="mailto:justciaranhanrahan@gmail.com">email me</a> at justciaranhanrahan@gmail.com!
       </p>
 
       <hr>
-      <h3>How I Work</h3>
+      <h3 class="text-gray">How I Work</h3>
       <p class="grey">
         → See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.<br>
         → Read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work and my process</a>.<br>
@@ -75,20 +77,19 @@
     <div class="container">
       <div class="testimonial">
         <p>
-          "Ciaran's product design and work are at the intersection of highly beautiful and functional. He always put's the users needs first and then crafts a great user experience paired with a great UI. Working with Ciaran is a treat and he comes strongly recommended across my network."
+          "Ciarán and I have collaborated on a number of projects. He’s my favourite product designer I’ve worked with in my career. Everyone has positive things to say about him (even behind his back)."
         </p>
 
-
-          <p>
-            <b><a target="_blank" href="https://twitter.com/mikepreuss">Mike Preuss</a><b><br>
-            <span class="text-gray">
-              CEO & Founder at <a target="_blank" href="https://visible.vc">Visible.vc</a>
-            </span>
-          </p>
+        <p>
+          <b><a target="_blank" href="http://whelton.io/">James Whelton</a><b><br>
+          <span class="text-gray">Founder of <a target="_blank" href="https://www.conjure.so">Conjure</a>, Co-founder of <a target="_blank" href="https://coderdojo.com/">CoderDojo</a>
+          </span>
+        </p>
       </div>
       </div>
 
     </div>
+
     <div class="footer">
       <div class="container">
         <div class="flex justify-between mb-4">
