--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
         <p>
           <b><a target="_blank" href="http://whelton.io/">James Whelton</a><b><br>
-          <span class="text-gray">Founder of <a target="_blank" href="https://www.conjure.so">Conjure</a>, Co-founder of <a target="_blank" href="https://coderdojo.com/">CoderDojo</a>
+          <span class="text-gray">Founder of <a target="_blank" href="https://conjure.so/">Conjure</a>, Co-founder of <a target="_blank" href="https://coderdojo.com/">CoderDojo</a>
           </span>
         </p>
       </div>
