--- a/testimonials.html
+++ b/testimonials.html
@@ -46,7 +46,7 @@
 
         <p>
           <b><a target="_blank" href="http://whelton.io/">James Whelton</a><b><br>
-          <span class="text-gray">Founder of <a target="_blank" href="https://www.conjure.so">Conjure</a>, Co-founder of <a target="_blank" href="https://coderdojo.com/">CoderDojo</a>
+          <span class="text-gray">Founder of <a target="_blank" href="https://conjure.so/">Conjure</a>, Co-founder of <a target="_blank" href="https://coderdojo.com/">CoderDojo</a>
           </span>
         </p>
       </div>
@@ -71,7 +71,7 @@
 
           <p>
             <b><a target="_blank" href="https://twitter.com/tonyennis">Jack Flynn</a><b><br>
-            <span class="text-gray">Head of Product Design <a target="_blank" href="https://www.onefootball.com">OneFootball</a>
+            <span class="text-gray">Head of Product Design at <a target="_blank" href="https://www.onefootball.com">OneFootball</a>
             </span>
           </p>
       </div>
