--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
   </div>
   <hr>
 
+  <div class="testimonial">
+    <p>
+      What I appreciated most about Ciarán was his pragmatic approach to designing software. He focuses on simplicity and strips back an interface to only the essential elements. He skillfully used this approach to create an entirely new product for video creators at OneFootball. Upon release, the work was highly praised for its impact and "simple UI/UX".
+    </p>
+
+      <p>
+        <b><a target="_blank" href="https://twitter.com/tonyennis">Jack Flynn</a><b><br>
+        <span class="text-gray">Head of Product Design at <a target="_blank" href="https://www.onefootball.com">OneFootball</a>
+        </span>
+      </p>
+  </div>
+  <hr>
+
   <h1>Projects</h1>
   <br>
 
@@ -349,9 +362,9 @@
 
 <div class="bg-grey-testimonial">
   <div class="container">
-    <div class="testimonial align-center">
+    <div class="testimonial">
       <p>
-        "I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
+        I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
           What sets him apart is his ability to:
       </p>
         <ol>
