--- a/testimonials.html
+++ b/testimonials.html
@@ -41,7 +41,7 @@
 
       <div class="testimonial">
         <p>
-          "Ciarán and I have collaborated on a number of projects. He’s my favourite product designer I’ve worked with in my career. Everyone has positive things to say about him (even behind his back)."
+          Ciarán and I have collaborated on a number of projects. He’s my favourite product designer I’ve worked with in my career. Everyone has positive things to say about him (even behind his back)."
         </p>
 
         <p>
@@ -53,7 +53,7 @@
       <hr>
       <div class="testimonial">
         <p>
-          "We hired Ciarán for three months to design the first version of our B2B product for video creators. The project is a critical part of OneFootball's platform vision, so there were high expectations and tight deadlines from the beginning.
+          We hired Ciarán for three months to design the first version of our B2B product for video creators. The project is a critical part of OneFootball's platform vision, so there were high expectations and tight deadlines from the beginning.
         </p>
 
           <p>
@@ -78,7 +78,7 @@
       <hr>
       <div class="testimonial">
         <p>
-          "I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
+          I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
             What sets him apart is his ability to:
         </p>
           <ol>
@@ -98,7 +98,7 @@
       <hr>
       <div class="testimonial">
         <p>
-          "Ciaran's product design and work are at the intersection of highly beautiful and functional. He always put's the users needs first and then crafts a great user experience paired with a great UI. Working with Ciaran is a treat and he comes strongly recommended across my network."
+          Ciaran's product design and work are at the intersection of highly beautiful and functional. He always put's the users needs first and then crafts a great user experience paired with a great UI. Working with Ciaran is a treat and he comes strongly recommended across my network."
         </p>
 
 
