--- a/testimonials.html
+++ b/testimonials.html
@@ -70,7 +70,7 @@
           </p>
 
           <p>
-            <b><a target="_blank" href="https://twitter.com/tonyennis">Jack Flynn</a><b><br>
+            <b><a target="_blank" href="https://www.linkedin.com/in/jack-flynn-8a434429">Jack Flynn</a><b><br>
             <span class="text-gray">Head of Product Design at <a target="_blank" href="https://www.onefootball.com">OneFootball</a>
             </span>
           </p>
