--- a/index.html
+++ b/index.html
@@ -360,28 +360,28 @@
   </a>
 </div>
 
-<div class="bg-grey-testimonial">
-  <div class="container">
-    <div class="testimonial">
-      <p>
-        I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
-          What sets him apart is his ability to:
-      </p>
-        <ol>
-          <li>Understand what he’s designing or selling almost better than the client understands it (I believe this is called cognitive empathy). </li>
-          <li>Work at pace while maintaining design integrity. I’ve genuinely never worked with someone who has managed to get the really important things right, and nail the finish, without spending a disproportionate amount of time on the minutiae. This style works incredibly well if you’re working on SAAS and/or landing pages, both of which were the case for our projects.</li>
-        </ol>
+  <div class="bg-grey-testimonial">
+    <div class="container">
+      <div class="testimonial">
         <p>
-          I’ve worked with Ciaran on 3 projects this year - two where we were working for the same client, and one where he was working for me. I have since recommended him to over 10 people in my personal network - this is not an exaggeration."
+          I’ve been in tech for 15 years. Ciarán is in the top 3 designers I’ve ever worked with. His grasp of the fundamentals are very strong, but that’s not what sets him apart.
+            What sets him apart is his ability to:
         </p>
+          <ol>
+            <li>Understand what he’s designing or selling almost better than the client understands it (I believe this is called cognitive empathy). </li>
+            <li>Work at pace while maintaining design integrity. I’ve genuinely never worked with someone who has managed to get the really important things right, and nail the finish, without spending a disproportionate amount of time on the minutiae. This style works incredibly well if you’re working on SAAS and/or landing pages, both of which were the case for our projects.</li>
+          </ol>
+          <p>
+            I’ve worked with Ciaran on 3 projects this year - two where we were working for the same client, and one where he was working for me. I have since recommended him to over 10 people in my personal network - this is not an exaggeration."
+          </p>
 
-        <p>
-          <b><a target="_blank" href="https://twitter.com/tonyennis">Tony Ennis</a><b><br>
-          <span class="text-gray">Prev Co-founder at <a target="_blank" href="https://www.firstcircle.ph">First Circle</a>, CTO at <a target="_blank" href="https://websummit.com/">Web Summit</a>
-          </span>
-        </p>
+          <p>
+            <b><a target="_blank" href="https://twitter.com/tonyennis">Tony Ennis</a><b><br>
+            <span class="text-gray">Prev Co-founder at <a target="_blank" href="https://www.firstcircle.ph">First Circle</a>, CTO at <a target="_blank" href="https://websummit.com/">Web Summit</a>
+            </span>
+          </p>
+      </div>
     </div>
-</div>
   </div>
 
     <div class="footer">
@@ -404,5 +404,16 @@
         </div>
       </div>
     </div>
+
+    <script>window.SavvyCal=window.SavvyCal||function(){(SavvyCal.q=SavvyCal.q||[]).push(arguments)};</script>
+    <script async src="https://embed.savvycal.com/v1/embed.js"></script>
+    <script>
+      SavvyCal('init', {
+        widget: {
+          enabled: true,
+          link: 'ciaran/chat'
+        }
+      })
+    </script>
 </body>
 </html>
