--- a/about.html
+++ b/about.html
@@ -109,5 +109,15 @@
         </div>
       </div>
     </div>
+    <script>window.SavvyCal=window.SavvyCal||function(){(SavvyCal.q=SavvyCal.q||[]).push(arguments)};</script>
+    <script async src="https://embed.savvycal.com/v1/embed.js"></script>
+    <script>
+      SavvyCal('init', {
+        widget: {
+          enabled: true,
+          link: 'ciaran/chat'
+        }
+      })
+    </script>
 </body>
 </html>
